@@ -1,28 +1,31 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.android;
 
 import com.facebook.buck.android.toolchain.ndk.AndroidNdk;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatform;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxPlatformsProvider;
 import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntime;
-import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntimeType;
 import com.facebook.buck.android.toolchain.ndk.TargetCpuType;
+import com.facebook.buck.android.toolchain.ndk.UnresolvedNdkCxxPlatform;
+import com.facebook.buck.android.toolchain.ndk.impl.StaticUnresolvedNdkCxxPlatform;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.targetgraph.AbstractNodeBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
 import com.facebook.buck.core.toolchain.ToolchainProvider;
@@ -31,10 +34,11 @@ import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.io.ExecutableFinder;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.google.common.collect.ImmutableList;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.rules.macros.StringWithMacros;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
+import com.google.common.collect.Iterables;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
@@ -45,17 +49,17 @@ public class NdkLibraryBuilder
         NdkLibraryDescription,
         NdkLibrary> {
 
-  private static final NdkCxxPlatform DEFAULT_NDK_PLATFORM =
-      NdkCxxPlatform.builder()
-          .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
-          .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-          .setCxxRuntimeType(NdkCxxRuntimeType.DYNAMIC)
-          .setCxxSharedRuntimePath(Paths.get("runtime"))
-          .setObjdump(new CommandTool.Builder().addArg("objdump").build())
-          .build();
+  private static final UnresolvedNdkCxxPlatform DEFAULT_NDK_PLATFORM =
+      StaticUnresolvedNdkCxxPlatform.of(
+          NdkCxxPlatform.builder()
+              .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
+              .setCxxRuntime(NdkCxxRuntime.GNUSTL)
+              .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
+              .setObjdump(new CommandTool.Builder().addArg("objdump").build())
+              .build());
 
-  public static final ImmutableMap<TargetCpuType, NdkCxxPlatform> NDK_PLATFORMS =
-      ImmutableMap.<TargetCpuType, NdkCxxPlatform>builder()
+  public static final ImmutableMap<TargetCpuType, UnresolvedNdkCxxPlatform> NDK_PLATFORMS =
+      ImmutableMap.<TargetCpuType, UnresolvedNdkCxxPlatform>builder()
           .put(TargetCpuType.ARM, DEFAULT_NDK_PLATFORM)
           .put(TargetCpuType.ARMV7, DEFAULT_NDK_PLATFORM)
           .put(TargetCpuType.X86, DEFAULT_NDK_PLATFORM)
@@ -76,7 +80,7 @@ public class NdkLibraryBuilder
   public NdkLibraryBuilder(
       BuildTarget target, ProjectFilesystem filesystem, ToolchainProvider toolchainProvider) {
     super(
-        new NdkLibraryDescription() {
+        new NdkLibraryDescription(toolchainProvider) {
           @Override
           protected ImmutableSortedSet<SourcePath> findSources(
               ProjectFilesystem filesystem, Path buildRulePath) {
@@ -86,8 +90,7 @@ public class NdkLibraryBuilder
         },
         target,
         filesystem,
-        toolchainProvider,
-        null);
+        toolchainProvider);
   }
 
   public static ToolchainProvider createToolchainProviderForNdkLibrary() {
@@ -106,7 +109,7 @@ public class NdkLibraryBuilder
   }
 
   public NdkLibraryBuilder setFlags(Iterable<String> flags) {
-    getArgForPopulating().setFlags(ImmutableList.copyOf(flags));
+    getArgForPopulating().setFlags(Iterables.transform(flags, StringWithMacros::ofConstantString));
     return this;
   }
 
