@@ -1,17 +1,17 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.cxx;
@@ -22,26 +22,28 @@ import static org.junit.Assert.assertNull;
 import com.facebook.buck.core.config.FakeBuckConfig;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
 import com.facebook.buck.core.rules.BuildRuleParams;
 import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
-import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.cxx.config.CxxBuckConfig;
 import com.facebook.buck.cxx.toolchain.CxxPlatform;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
+import com.facebook.buck.cxx.toolchain.HeaderSymlinkTree;
 import com.facebook.buck.cxx.toolchain.linker.Linker;
-import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkable;
+import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkableGroup;
 import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkableInput;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.rules.FakeBuildRule;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.args.SourcePathArg;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.step.Step;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.util.types.Either;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
@@ -98,17 +100,14 @@ public class CxxLibraryTest {
     CxxPreprocessorInput expectedPublicCxxPreprocessorInput =
         CxxPreprocessorInput.builder()
             .addIncludes(
-                CxxSymlinkTreeHeaders.builder()
-                    .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
-                    .setNameToPathMap(
-                        ImmutableSortedMap.of(
-                            Paths.get("header.h"),
-                            DefaultBuildTargetSourcePath.of(publicHeaderTarget)))
-                    .setRoot(DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget))
-                    .setIncludeRoot(
-                        Either.ofRight(
-                            DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget)))
-                    .build())
+                CxxSymlinkTreeHeaders.of(
+                    CxxPreprocessables.IncludeType.LOCAL,
+                    DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget),
+                    Either.ofRight(DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget)),
+                    Optional.empty(),
+                    ImmutableSortedMap.of(
+                        Paths.get("header.h"), DefaultBuildTargetSourcePath.of(publicHeaderTarget)),
+                    HeaderSymlinkTree.class.getName()))
             .build();
     assertEquals(
         expectedPublicCxxPreprocessorInput,
@@ -117,17 +116,15 @@ public class CxxLibraryTest {
     CxxPreprocessorInput expectedPrivateCxxPreprocessorInput =
         CxxPreprocessorInput.builder()
             .addIncludes(
-                CxxSymlinkTreeHeaders.builder()
-                    .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
-                    .setRoot(DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget))
-                    .setIncludeRoot(
-                        Either.ofRight(
-                            DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget)))
-                    .setNameToPathMap(
-                        ImmutableSortedMap.of(
-                            Paths.get("header.h"),
-                            DefaultBuildTargetSourcePath.of(privateHeaderTarget)))
-                    .build())
+                CxxSymlinkTreeHeaders.of(
+                    CxxPreprocessables.IncludeType.LOCAL,
+                    DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget),
+                    Either.ofRight(DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget)),
+                    Optional.empty(),
+                    ImmutableSortedMap.of(
+                        Paths.get("header.h"),
+                        DefaultBuildTargetSourcePath.of(privateHeaderTarget)),
+                    HeaderSymlinkTree.class.getName()))
             .build();
     assertEquals(
         expectedPrivateCxxPreprocessorInput,
@@ -143,7 +140,10 @@ public class CxxLibraryTest {
     assertEquals(
         expectedStaticNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform, Linker.LinkableDepType.STATIC, graphBuilder));
+            cxxPlatform,
+            Linker.LinkableDepType.STATIC,
+            graphBuilder,
+            UnconfiguredTargetConfiguration.INSTANCE));
 
     // Verify that we get the static archive and its build target via the NativeLinkable
     // interface.
@@ -155,7 +155,10 @@ public class CxxLibraryTest {
     assertEquals(
         expectedSharedNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder));
+            cxxPlatform,
+            Linker.LinkableDepType.SHARED,
+            graphBuilder,
+            UnconfiguredTargetConfiguration.INSTANCE));
 
     // Verify that the implemented BuildRule methods are effectively unused.
     assertEquals(ImmutableList.<Step>of(), cxxLibrary.getBuildSteps(null, null));
@@ -163,7 +166,7 @@ public class CxxLibraryTest {
   }
 
   @Test
-  public void headerOnlyExports() throws Exception {
+  public void headerOnlyExports() {
     ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
@@ -182,14 +185,13 @@ public class CxxLibraryTest {
             DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//foo:baz")));
 
     // Construct a CxxLibrary object to test.
-    CxxLibrary cxxLibrary =
-        new CxxLibrary(
+    CxxLibraryGroup cxxLibrary =
+        new CxxLibraryGroup(
             target,
             projectFilesystem,
             params,
-            graphBuilder.getParallelizer(),
-            CxxDeps.of(),
-            CxxDeps.of(),
+            CxxDeps.EMPTY_INSTANCE,
+            CxxDeps.EMPTY_INSTANCE,
             /* headerOnly */ x -> true,
             (unused1, unused2) -> StringArg.from("-ldl"),
             (unused1, unused2) -> StringArg.from("-lfoobarbaz"),
@@ -197,29 +199,33 @@ public class CxxLibraryTest {
             /* supportedPlatformsRegex */ Optional.empty(),
             ImmutableSet.of(frameworkPath),
             ImmutableSet.of(),
-            NativeLinkable.Linkage.STATIC,
+            NativeLinkableGroup.Linkage.STATIC,
             /* linkWhole */ false,
             Optional.empty(),
             ImmutableSortedSet.of(),
             /* isAsset */ false,
             true,
             true,
-            Optional.empty());
+            true,
+            CxxLibraryDescriptionDelegate.noop());
 
     NativeLinkableInput expectedSharedNativeLinkableInput =
         NativeLinkableInput.of(
-            StringArg.from("-ldl", "-lfoobarbaz"),
+            ImmutableList.copyOf(StringArg.from("-ldl", "-lfoobarbaz")),
             ImmutableSet.of(frameworkPath),
             ImmutableSet.of());
 
     assertEquals(
         expectedSharedNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder));
+            cxxPlatform,
+            Linker.LinkableDepType.SHARED,
+            graphBuilder,
+            UnconfiguredTargetConfiguration.INSTANCE));
   }
 
   @Test
-  public void postLinkerArgumentsExistWhenPassed() throws Exception {
+  public void postLinkerArgumentsExistWhenPassed() {
     ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
@@ -238,14 +244,13 @@ public class CxxLibraryTest {
             DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//foo:baz")));
 
     // Construct a CxxLibrary object to test.
-    CxxLibrary cxxLibrary =
-        new CxxLibrary(
+    CxxLibraryGroup cxxLibrary =
+        new CxxLibraryGroup(
             target,
             projectFilesystem,
             params,
-            graphBuilder.getParallelizer(),
-            CxxDeps.of(),
-            CxxDeps.of(),
+            CxxDeps.EMPTY_INSTANCE,
+            CxxDeps.EMPTY_INSTANCE,
             /* headerOnly */ x -> true,
             (unused1, unused2) -> StringArg.from("-ldl"),
             (unused1, unused2) -> StringArg.from("-lfoobarbaz"),
@@ -253,14 +258,15 @@ public class CxxLibraryTest {
             /* supportedPlatformsRegex */ Optional.empty(),
             ImmutableSet.of(frameworkPath),
             ImmutableSet.of(),
-            NativeLinkable.Linkage.STATIC,
+            NativeLinkableGroup.Linkage.STATIC,
             /* linkWhole */ false,
             Optional.empty(),
             ImmutableSortedSet.of(),
             /* isAsset */ false,
             true,
             true,
-            Optional.empty());
+            true,
+            CxxLibraryDescriptionDelegate.noop());
 
     ImmutableList.Builder<Arg> linkerArgsBuilder = ImmutableList.builder();
     linkerArgsBuilder.add(StringArg.of("-ldl"));
@@ -274,7 +280,11 @@ public class CxxLibraryTest {
         NativeLinkableInput.of(linkerArgs, ImmutableSet.of(frameworkPath), ImmutableSet.of());
 
     NativeLinkableInput actualSharedNativeLinkableInput =
-        cxxLibrary.getNativeLinkableInput(cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder);
+        cxxLibrary.getNativeLinkableInput(
+            cxxPlatform,
+            Linker.LinkableDepType.SHARED,
+            graphBuilder,
+            UnconfiguredTargetConfiguration.INSTANCE);
 
     assertEquals(expectedSharedNativeLinkableInput, actualSharedNativeLinkableInput);
   }
