@@ -1,17 +1,17 @@
 /*
- * Copyright 2015-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.cxx;
@@ -19,6 +19,7 @@ package com.facebook.buck.cxx;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 
@@ -29,15 +30,17 @@ import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.InternalFlavor;
+import com.facebook.buck.core.model.impl.BuildTargetPaths;
 import com.facebook.buck.core.rulekey.RuleKey;
-import com.facebook.buck.core.rulekey.RuleKeyObjectSink;
+import com.facebook.buck.core.rules.BuildRule;
 import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
-import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolverAdapter;
+import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
 import com.facebook.buck.core.toolchain.tool.Tool;
 import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
 import com.facebook.buck.core.toolchain.tool.impl.HashedFileTool;
@@ -47,22 +50,35 @@ import com.facebook.buck.cxx.toolchain.DefaultCompiler;
 import com.facebook.buck.cxx.toolchain.GccCompiler;
 import com.facebook.buck.cxx.toolchain.GccPreprocessor;
 import com.facebook.buck.cxx.toolchain.Preprocessor;
+import com.facebook.buck.cxx.toolchain.ToolType;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.rules.FakeBuildRule;
-import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.io.pathformat.PathFormatter;
+import com.facebook.buck.rules.args.AddsToRuleKeyFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
+import com.facebook.buck.rules.modern.SerializationTestHelper;
 import com.facebook.buck.testutil.FakeFileHashCache;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.testutil.PathNormalizer;
+import com.facebook.buck.util.json.ObjectMappers;
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonIgnoreType;
+import com.fasterxml.jackson.annotation.PropertyAccessor;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.FileSystem;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
+import java.util.function.Supplier;
 import org.junit.Test;
 
 public class CxxPreprocessAndCompileTest {
@@ -79,7 +95,7 @@ public class CxxPreprocessAndCompileTest {
     static final String COLOR_FLAG = "-use-color-in-compiler";
 
     public CompilerWithColorSupport(Tool tool) {
-      super(tool);
+      super(tool, false);
     }
 
     @Override
@@ -88,6 +104,7 @@ public class CxxPreprocessAndCompileTest {
     }
   }
 
+  private static final Optional<Boolean> DEFAULT_USE_ARG_FILE = Optional.empty();
   private static final CxxToolFlags DEFAULT_TOOL_FLAGS =
       CxxToolFlags.explicitBuilder()
           .addPlatformFlags(StringArg.of("-fsanitize=address"))
@@ -98,16 +115,11 @@ public class CxxPreprocessAndCompileTest {
   private static final CxxSource.Type DEFAULT_INPUT_TYPE = CxxSource.Type.CXX;
   private static final PathSourcePath DEFAULT_WORKING_DIR =
       FakeSourcePath.of(System.getProperty("user.dir"));
-  private static final RuleKeyAppendableFunction<FrameworkPath, Path>
-      DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION =
-          new DefaultFramworkPathSearchPathAppendableFunction();
+  private static final AddsToRuleKeyFunction<FrameworkPath, Path>
+      DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION = new DefaultFramworkPathSearchPathFunction();
 
-  private static class DefaultFramworkPathSearchPathAppendableFunction
-      implements RuleKeyAppendableFunction<FrameworkPath, Path> {
-    @Override
-    public void appendToRuleKey(RuleKeyObjectSink sink) {
-      // Do nothing.
-    }
+  private static class DefaultFramworkPathSearchPathFunction
+      implements AddsToRuleKeyFunction<FrameworkPath, Path> {
 
     @Override
     public Path apply(FrameworkPath input) {
@@ -130,7 +142,10 @@ public class CxxPreprocessAndCompileTest {
               () ->
                   PathSourcePath.of(
                       projectFilesystem,
-                      PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))));
+                      PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))),
+          ToolType.CXX,
+          false,
+          false);
   private Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
       new PreprocessorWithColorSupport(
           new HashedFileTool(
@@ -147,9 +162,8 @@ public class CxxPreprocessAndCompileTest {
                       PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))));
 
   @Test
-  public void inputChangesCauseRuleKeyChangesForCompilation() throws Exception {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+  public void inputChangesCauseRuleKeyChangesForCompilation() {
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
@@ -186,7 +200,7 @@ public class CxxPreprocessAndCompileTest {
     // Generate a rule key for the defaults.
 
     RuleKey defaultRuleKey =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -195,7 +209,8 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
-                        DEFAULT_TOOL_FLAGS),
+                        DEFAULT_TOOL_FLAGS,
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -204,7 +219,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the compiler causes a rulekey change.
 
     RuleKey compilerChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -217,8 +232,11 @@ public class CxxPreprocessAndCompileTest {
                                 PathSourcePath.of(
                                     projectFilesystem,
                                     PathNormalizer.toWindowsPathIfNeeded(
-                                        Paths.get("/root/different"))))),
-                        DEFAULT_TOOL_FLAGS),
+                                        Paths.get("/root/different")))),
+                            ToolType.CXX,
+                            false),
+                        DEFAULT_TOOL_FLAGS,
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -228,7 +246,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the operation causes a rulekey change.
 
     RuleKey operationChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -247,7 +265,8 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
-                        DEFAULT_TOOL_FLAGS),
+                        DEFAULT_TOOL_FLAGS,
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -258,7 +277,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the platform flags causes a rulekey change.
 
     RuleKey platformFlagsChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -270,7 +289,8 @@ public class CxxPreprocessAndCompileTest {
                         CxxToolFlags.explicitBuilder()
                             .addPlatformFlags(StringArg.of("-different"))
                             .setRuleFlags(DEFAULT_TOOL_FLAGS.getRuleFlags())
-                            .build()),
+                            .build(),
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -280,7 +300,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the rule flags causes a rulekey change.
 
     RuleKey ruleFlagsChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -292,7 +312,8 @@ public class CxxPreprocessAndCompileTest {
                         CxxToolFlags.explicitBuilder()
                             .setPlatformFlags(DEFAULT_TOOL_FLAGS.getPlatformFlags())
                             .addAllRuleFlags(StringArg.from("-other", "flags"))
-                            .build()),
+                            .build(),
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -302,7 +323,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the input causes a rulekey change.
 
     RuleKey inputChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -311,7 +332,8 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
-                        DEFAULT_TOOL_FLAGS),
+                        DEFAULT_TOOL_FLAGS,
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     FakeSourcePath.of(
                         PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/different"))),
@@ -321,10 +343,8 @@ public class CxxPreprocessAndCompileTest {
   }
 
   @Test
-  public void preprocessorFlagsRuleKeyChangesCauseRuleKeyChangesForPreprocessing()
-      throws Exception {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+  public void preprocessorFlagsRuleKeyChangesCauseRuleKeyChangesForPreprocessing() {
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
@@ -360,7 +380,7 @@ public class CxxPreprocessAndCompileTest {
 
     class TestData {
       public RuleKey generate(PreprocessorFlags flags) {
-        return new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        return new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -379,7 +399,8 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
-                        CxxToolFlags.of()),
+                        CxxToolFlags.of(),
+                        DEFAULT_USE_ARG_FILE),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
@@ -392,18 +413,19 @@ public class CxxPreprocessAndCompileTest {
     PreprocessorFlags defaultFlags = PreprocessorFlags.builder().build();
     PreprocessorFlags alteredFlags =
         defaultFlags.withFrameworkPaths(
-            FrameworkPath.ofSourcePath(
-                FakeSourcePath.of(
-                    PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/different")))));
+            ImmutableList.of(
+                FrameworkPath.ofSourcePath(
+                    FakeSourcePath.of(
+                        PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/different"))))));
     assertNotEquals(testData.generate(defaultFlags), testData.generate(alteredFlags));
   }
 
   @Test
   public void usesCorrectCommandForCompile() {
     // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -419,11 +441,11 @@ public class CxxPreprocessAndCompileTest {
             projectFilesystem,
             ruleFinder,
             new CompilerDelegate(
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER, DEFAULT_COMPILER, flags),
+                NoopDebugPathSanitizer.INSTANCE, DEFAULT_COMPILER, flags, DEFAULT_USE_ARG_FILE),
             outputName,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+            NoopDebugPathSanitizer.INSTANCE);
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
@@ -433,8 +455,7 @@ public class CxxPreprocessAndCompileTest {
             .add("-O3")
             .add(
                 "-o",
-                PathNormalizer.toWindowsPathIfNeeded(Paths.get("buck-out/gen/foo/bar__/test.o"))
-                    .toString())
+                BuildTargetPaths.getGenPath(projectFilesystem, target, "%s__/test.o").toString())
             .add("-c")
             .add(input.toString())
             .build();
@@ -453,16 +474,16 @@ public class CxxPreprocessAndCompileTest {
     SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    SourcePathResolverAdapter pathResolver = ruleFinder.getSourcePathResolver();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
     projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        projectFilesystem.getPath(
-            PathNormalizer.toWindowsPathIfNeeded(Paths.get("buck-out/gen/foo/bar__/test.o.dep"))
-                .toString()));
+        BuildTargetPaths.getGenPath(
+                projectFilesystem, BuildTargetFactory.newInstance("//foo:bar"), "%s__")
+            .resolve("test.o.dep"));
     PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
@@ -482,7 +503,8 @@ public class CxxPreprocessAndCompileTest {
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 DEFAULT_COMPILER,
-                CxxToolFlags.of()),
+                CxxToolFlags.of(),
+                DEFAULT_USE_ARG_FILE),
             DEFAULT_OUTPUT,
             fakeInput,
             DEFAULT_INPUT_TYPE,
@@ -490,7 +512,8 @@ public class CxxPreprocessAndCompileTest {
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxPreprocess.getInputsAfterBuildingLocally(context, cellPathResolver),
-        hasItem(preprocessor));
+        not(hasItem(preprocessor)));
+    assertFalse(cxxPreprocess.getCoveredByDepFilePredicate(pathResolver).test(preprocessor));
 
     CxxPreprocessAndCompile cxxCompile =
         CxxPreprocessAndCompile.compile(
@@ -499,21 +522,24 @@ public class CxxPreprocessAndCompileTest {
             ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                new GccCompiler(compilerTool),
-                CxxToolFlags.of()),
+                new GccCompiler(compilerTool, ToolType.CXX, false),
+                CxxToolFlags.of(),
+                DEFAULT_USE_ARG_FILE),
             DEFAULT_OUTPUT,
             fakeInput,
             DEFAULT_INPUT_TYPE,
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
-        cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver), hasItem(compiler));
+        cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver),
+        not(hasItem(compiler)));
+    assertFalse(cxxCompile.getCoveredByDepFilePredicate(pathResolver).test(compiler));
   }
 
   @Test
   public void usesColorFlagForCompilationWhenRequested() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.o";
     Path input = Paths.get("test.ii");
@@ -522,7 +548,8 @@ public class CxxPreprocessAndCompileTest {
         new CompilerDelegate(
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
             COMPILER_WITH_COLOR_SUPPORT,
-            CxxToolFlags.of());
+            CxxToolFlags.of(),
+            DEFAULT_USE_ARG_FILE);
 
     CxxPreprocessAndCompile buildRule =
         CxxPreprocessAndCompile.compile(
@@ -546,9 +573,9 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void usesColorFlagForPreprocessingWhenRequested() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.ii";
     Path input = Paths.get("test.cpp");
@@ -570,7 +597,8 @@ public class CxxPreprocessAndCompileTest {
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 COMPILER_WITH_COLOR_SUPPORT,
-                CxxToolFlags.of()),
+                CxxToolFlags.of(),
+                DEFAULT_USE_ARG_FILE),
             output,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
@@ -596,5 +624,188 @@ public class CxxPreprocessAndCompileTest {
         projectFilesystem.resolve(
             PathNormalizer.toWindowsPathIfNeeded(Paths.get("foo/bar.m.gcno"))),
         output);
+  }
+
+  @Test
+  public void usesUnixPathSeparatorForCompile() {
+    // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
+    BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
+    Path includePath = PathNormalizer.toWindowsPathIfNeeded(Paths.get("/foo/bar/zap"));
+    String includedPathStr = PathFormatter.pathWithUnixSeparators(includePath);
+
+    CxxToolFlags flags =
+        CxxToolFlags.explicitBuilder()
+            .addPlatformFlags(StringArg.of("-ffunction-sections"))
+            .addRuleFlags(StringArg.of("-O3"))
+            .addRuleFlags(StringArg.of("-I " + includedPathStr))
+            .build();
+
+    String slash = File.separator;
+    String outputName = "baz" + slash + "test.o";
+    Path input = Paths.get("foo" + slash + "test.ii");
+
+    CxxPreprocessAndCompile buildRule =
+        CxxPreprocessAndCompile.compile(
+            target,
+            projectFilesystem,
+            ruleFinder,
+            new CompilerDelegate(
+                NoopDebugPathSanitizer.INSTANCE,
+                new GccCompiler(
+                    new HashedFileTool(
+                        () ->
+                            PathSourcePath.of(
+                                projectFilesystem,
+                                PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))),
+                    ToolType.CXX,
+                    false),
+                flags,
+                DEFAULT_USE_ARG_FILE),
+            outputName,
+            FakeSourcePath.of(input.toString()),
+            DEFAULT_INPUT_TYPE,
+            NoopDebugPathSanitizer.INSTANCE);
+
+    ImmutableList<String> expectedCompileCommand =
+        ImmutableList.<String>builder()
+            .add(PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")).toString())
+            .add("-x", "c++")
+            .add("-ffunction-sections")
+            .add("-O3")
+            .add("-I " + PathFormatter.pathWithUnixSeparators(includePath))
+            .add(
+                "-o",
+                "buck-out/gen/"
+                    + BuildTargetPaths.getBasePath(
+                        projectFilesystem, BuildTargetFactory.newInstance("//foo:bar"), "%s__")
+                    + "/baz/test.o")
+            .add("-c")
+            .add(PathFormatter.pathWithUnixSeparators(input.toString()))
+            .build();
+    ImmutableList<String> actualCompileCommand =
+        buildRule.makeMainStep(context, false).getCommand();
+    assertEquals(expectedCompileCommand, actualCompileCommand);
+  }
+
+  @JsonIgnoreType
+  abstract class FileSystemMixIn {}
+
+  abstract class MemoizingSupplierMixIn<T> {
+    @JsonIgnore Supplier<T> delegate;
+  }
+
+  abstract class PreprocessorDelegateMixIn {
+    @JsonIgnore Optional<BuildRule> aggregatedDeps;
+  }
+
+  @Test
+  public void testSerialization() throws IOException, ClassNotFoundException {
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
+    Path includePath = PathNormalizer.toWindowsPathIfNeeded(Paths.get("/foo/bar/zap"));
+    String includedPathStr = PathFormatter.pathWithUnixSeparators(includePath);
+    CxxToolFlags cxxToolFlags =
+        CxxToolFlags.explicitBuilder()
+            .addPlatformFlags(StringArg.of("-ffunction-sections"))
+            .addRuleFlags(StringArg.of("-O3"))
+            .addRuleFlags(StringArg.of("-I " + includedPathStr))
+            .build();
+    PreprocessorFlags preprocessorFlags =
+        PreprocessorFlags.builder()
+            .addIncludes(
+                CxxHeadersDir.of(
+                    CxxPreprocessables.IncludeType.SYSTEM, FakeSourcePath.of("foo/bar")),
+                CxxHeadersDir.of(CxxPreprocessables.IncludeType.SYSTEM, FakeSourcePath.of("test")))
+            .build()
+            .withFrameworkPaths(
+                ImmutableList.of(
+                    FrameworkPath.ofSourcePath(
+                        FakeSourcePath.of(
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("root/different"))))));
+    Optional<CxxIncludePaths> leadingIncludePaths =
+        Optional.of(preprocessorFlags.getCxxIncludePaths());
+    PreprocessorDelegate preprocessorDelegate =
+        new PreprocessorDelegate(
+            CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
+            FakeSourcePath.of("working/dir"),
+            new GccPreprocessor(
+                new HashedFileTool(
+                    () ->
+                        PathSourcePath.of(
+                            projectFilesystem,
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("repo/preprocessor"))))),
+            preprocessorFlags,
+            DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
+            leadingIncludePaths,
+            Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+            ImmutableSortedSet.of("white", "list"));
+    CompilerDelegate compilerDelegate =
+        new CompilerDelegate(
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
+            new GccCompiler(
+                new HashedFileTool(
+                    () ->
+                        PathSourcePath.of(
+                            projectFilesystem,
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("repo/compiler")))),
+                ToolType.CXX,
+                false,
+                false),
+            cxxToolFlags,
+            DEFAULT_USE_ARG_FILE);
+    CxxPrecompiledHeader precompiledHeader =
+        new CxxPrecompiledHeader(
+            /* canPrecompile */ false,
+            target,
+            new FakeProjectFilesystem(),
+            ImmutableSortedSet.of(),
+            Paths.get("dir/foo.hash1.hash2.hpp"),
+            preprocessorDelegate,
+            compilerDelegate,
+            CxxToolFlags.of(),
+            FakeSourcePath.of("foo.h"),
+            CxxSource.Type.C,
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+
+    CxxPreprocessAndCompile.Impl cxxPreprocessAndCompile =
+        new CxxPreprocessAndCompile.Impl(
+            target,
+            Optional.of(preprocessorDelegate),
+            compilerDelegate,
+            DEFAULT_OUTPUT,
+            DEFAULT_INPUT,
+            Optional.of(precompiledHeader),
+            DEFAULT_INPUT_TYPE,
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+
+    CxxPreprocessAndCompile.Impl reconstructed =
+        SerializationTestHelper.serializeAndDeserialize(
+            cxxPreprocessAndCompile,
+            CxxPreprocessAndCompile.Impl.class,
+            ruleFinder,
+            TestCellPathResolver.get(projectFilesystem),
+            ruleFinder.getSourcePathResolver(),
+            new ToolchainProviderBuilder().build(),
+            cellPath -> projectFilesystem);
+
+    ObjectMapper objectMapper = ObjectMappers.legacyCreate();
+    // TODO(nga): must not configure own mapper
+    objectMapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
+    objectMapper.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+    objectMapper.addMixIn(FileSystem.class, FileSystemMixIn.class);
+    objectMapper.addMixIn(
+        Class.forName("com.google.common.base.Suppliers$NonSerializableMemoizingSupplier"),
+        MemoizingSupplierMixIn.class);
+    objectMapper.addMixIn(PreprocessorDelegate.class, PreprocessorDelegateMixIn.class);
+
+    String originalStr =
+        objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(cxxPreprocessAndCompile);
+    String reconstructedSir =
+        objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(reconstructed);
+
+    assertEquals(originalStr, reconstructedSir);
   }
 }
