@@ -1,47 +1,48 @@
 /*
- * Copyright 2016-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.cxx;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNull;
 
 import com.facebook.buck.core.build.context.BuildContext;
 import com.facebook.buck.core.build.context.FakeBuildContext;
 import com.facebook.buck.core.config.FakeBuckConfig;
-import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
-import com.facebook.buck.core.rules.SourcePathRuleFinder;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
-import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
-import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.toolchain.tool.impl.HashedFileTool;
+import com.facebook.buck.core.toolchain.toolprovider.impl.ConstantToolProvider;
+import com.facebook.buck.cxx.config.CxxBuckConfig;
 import com.facebook.buck.cxx.toolchain.CxxPlatform;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.cxx.toolchain.CxxToolProvider;
-import com.facebook.buck.cxx.toolchain.MungingDebugPathSanitizer;
 import com.facebook.buck.cxx.toolchain.PicType;
+import com.facebook.buck.cxx.toolchain.PrefixMapDebugPathSanitizer;
 import com.facebook.buck.cxx.toolchain.PreprocessorProvider;
+import com.facebook.buck.cxx.toolchain.ToolType;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.args.StringArg;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.google.common.base.Preconditions;
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableList;
@@ -53,6 +54,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Objects;
 import java.util.Optional;
 import org.junit.Test;
 import org.junit.experimental.runners.Enclosed;
@@ -98,25 +100,22 @@ public class PrecompiledHeaderFeatureTest {
       String headerFilename = "foo.h";
       ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
       CxxPreprocessAndCompile rule =
-          preconfiguredSourceRuleFactoryBuilder(graphBuilder)
-              .setCxxPlatform(getPlatform())
-              .setCxxBuckConfig(buildConfig(pchEnabled))
-              .setPrefixHeader(FakeSourcePath.of(headerFilename))
-              .setPrecompiledHeader(Optional.empty())
-              .build()
+          preconfiguredSourceRuleFactory(
+                  graphBuilder,
+                  buildConfig(pchEnabled),
+                  getPlatform(),
+                  FakeSourcePath.of(headerFilename))
               .requirePreprocessAndCompileBuildRule(
-                  "foo.c", preconfiguredCxxSourceBuilder().build());
+                  "foo.c", preconfiguredCxxSource(ImmutableList.of()));
       boolean hasPchFlag =
           commandLineContainsPchFlag(
-              FakeBuildContext.withSourcePathResolver(
-                  DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder))),
+              FakeBuildContext.withSourcePathResolver(graphBuilder.getSourcePathResolver()),
               rule,
               toolType,
               headerFilename);
       boolean hasPrefixFlag =
           commandLineContainsPrefixFlag(
-              FakeBuildContext.withSourcePathResolver(
-                  DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder))),
+              FakeBuildContext.withSourcePathResolver(graphBuilder.getSourcePathResolver()),
               rule,
               toolType,
               headerFilename);
@@ -153,17 +152,13 @@ public class PrecompiledHeaderFeatureTest {
       ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
       CxxPlatform platform =
           PLATFORM_SUPPORTING_PCH.withCompilerDebugPathSanitizer(
-              new MungingDebugPathSanitizer(
-                  250, File.separatorChar, Paths.get("."), ImmutableBiMap.of()));
+              new PrefixMapDebugPathSanitizer(".", ImmutableBiMap.of()));
       CxxBuckConfig config = buildConfig(/* pchEnabled */ true);
       CxxSourceRuleFactory factory =
-          preconfiguredSourceRuleFactoryBuilder(graphBuilder)
-              .setCxxPlatform(platform)
-              .setPrefixHeader(FakeSourcePath.of(("foo.pch")))
-              .setCxxBuckConfig(config)
-              .build();
+          preconfiguredSourceRuleFactory(
+              graphBuilder, config, platform, FakeSourcePath.of("foo.pch"));
 
-      for (AbstractCxxSource.Type sourceType : AbstractCxxSource.Type.values()) {
+      for (CxxSource.Type sourceType : CxxSource.Type.values()) {
         if (!sourceType.isPreprocessable()) {
           // Need a preprocessor object if we want to test for PCH'ability.
           continue;
@@ -193,20 +188,15 @@ public class PrecompiledHeaderFeatureTest {
         public CxxPrecompiledHeader generate(Path from) {
           ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
           CxxSourceRuleFactory factory =
-              preconfiguredSourceRuleFactoryBuilder(graphBuilder)
-                  .setCxxPlatform(
-                      PLATFORM_SUPPORTING_PCH.withCompilerDebugPathSanitizer(
-                          new MungingDebugPathSanitizer(
-                              250,
-                              File.separatorChar,
-                              Paths.get("."),
-                              ImmutableBiMap.of(from, "melon"))))
-                  .setPrefixHeader(FakeSourcePath.of(("foo.pch")))
-                  .setCxxBuckConfig(buildConfig(/* pchEnabled */ true))
-                  .build();
+              preconfiguredSourceRuleFactory(
+                  graphBuilder,
+                  buildConfig(/* pchEnabled */ true),
+                  PLATFORM_SUPPORTING_PCH.withCompilerDebugPathSanitizer(
+                      new PrefixMapDebugPathSanitizer(".", ImmutableBiMap.of(from, "melon"))),
+                  FakeSourcePath.of("foo.pch"));
           BuildRule rule =
               factory.requirePreprocessAndCompileBuildRule(
-                  "foo.c", preconfiguredCxxSourceBuilder().addFlags("-I", from.toString()).build());
+                  "foo.c", preconfiguredCxxSource(ImmutableList.of("-I", from.toString())));
           return FluentIterable.from(rule.getBuildDeps())
               .filter(CxxPrecompiledHeader.class)
               .first()
@@ -216,7 +206,7 @@ public class PrecompiledHeaderFeatureTest {
       TestData testData = new TestData();
 
       Path root =
-          Preconditions.checkNotNull(
+          Objects.requireNonNull(
               Iterables.getFirst(
                   FileSystems.getDefault().getRootDirectories(), Paths.get(File.separator)));
       CxxPrecompiledHeader firstRule = testData.generate(root.resolve("first"));
@@ -233,15 +223,19 @@ public class PrecompiledHeaderFeatureTest {
         public CxxPrecompiledHeader generate(Iterable<String> flags) {
           ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
           CxxSourceRuleFactory factory =
-              preconfiguredSourceRuleFactoryBuilder(graphBuilder)
-                  .setCxxPlatform(PLATFORM_SUPPORTING_PCH)
-                  .setCxxBuckConfig(buildConfig(/* pchEnabled */ true))
-                  .putAllCompilerFlags(CxxSource.Type.C_CPP_OUTPUT, StringArg.from(flags))
-                  .setPrefixHeader(FakeSourcePath.of(("foo.h")))
-                  .build();
+              preconfiguredSourceRuleFactory(
+                  graphBuilder,
+                  buildConfig(/* pchEnabled */ true),
+                  PLATFORM_SUPPORTING_PCH,
+                  ImmutableList.of(),
+                  ImmutableMultimap.<CxxSource.Type, Arg>builder()
+                      .putAll(CxxSource.Type.C_CPP_OUTPUT, StringArg.from(flags))
+                      .build(),
+                  Optional.of(FakeSourcePath.of("foo.h")),
+                  Optional.empty());
           BuildRule rule =
               factory.requirePreprocessAndCompileBuildRule(
-                  "foo.c", preconfiguredCxxSourceBuilder().build());
+                  "foo.c", preconfiguredCxxSource(ImmutableList.of()));
           return FluentIterable.from(rule.getBuildDeps())
               .filter(CxxPrecompiledHeader.class)
               .first()
@@ -266,20 +260,21 @@ public class PrecompiledHeaderFeatureTest {
         public CxxPrecompiledHeader generate(String flags) {
           ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
           CxxSourceRuleFactory factory =
-              preconfiguredSourceRuleFactoryBuilder(graphBuilder)
-                  .setCxxPlatform(PLATFORM_SUPPORTING_PCH)
-                  .setCxxBuckConfig(buildConfig(/* pchEnabled */ true))
-                  .setCxxPreprocessorInput(
-                      ImmutableList.of(
-                          CxxPreprocessorInput.builder()
-                              .setPreprocessorFlags(
-                                  ImmutableMultimap.of(CxxSource.Type.C, StringArg.of(flags)))
-                              .build()))
-                  .setPrefixHeader(FakeSourcePath.of(("foo.h")))
-                  .build();
+              preconfiguredSourceRuleFactory(
+                  graphBuilder,
+                  buildConfig(/* pchEnabled */ true),
+                  PLATFORM_SUPPORTING_PCH,
+                  ImmutableList.of(
+                      CxxPreprocessorInput.builder()
+                          .setPreprocessorFlags(
+                              ImmutableMultimap.of(CxxSource.Type.C, StringArg.of(flags)))
+                          .build()),
+                  ImmutableMultimap.of(),
+                  Optional.of(FakeSourcePath.of("foo.h")),
+                  Optional.empty());
           BuildRule rule =
               factory.requirePreprocessAndCompileBuildRule(
-                  "foo.c", preconfiguredCxxSourceBuilder().build());
+                  "foo.c", preconfiguredCxxSource(ImmutableList.of()));
           return FluentIterable.from(rule.getBuildDeps())
               .filter(CxxPrecompiledHeader.class)
               .first()
@@ -294,6 +289,28 @@ public class PrecompiledHeaderFeatureTest {
           "Build target flavor generator should account for preprocessor flags",
           firstRule.getBuildTarget(),
           secondRule.getBuildTarget());
+    }
+
+    @Test
+    public void noPrecompiledHeaderForAsmInputs() {
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      CxxSourceRuleFactory factory =
+          preconfiguredSourceRuleFactory(
+              graphBuilder,
+              buildConfig(/* pchEnabled */ true),
+              PLATFORM_SUPPORTING_PCH,
+              FakeSourcePath.of(("foo.h")));
+      BuildRule rule =
+          factory.requireCompileBuildRule(
+              "foo.S",
+              CxxSource.of(
+                  CxxSource.Type.ASSEMBLER, FakeSourcePath.of("foo.S"), ImmutableList.of()));
+      CxxPrecompiledHeader headerRule =
+          FluentIterable.from(rule.getBuildDeps())
+              .filter(CxxPrecompiledHeader.class)
+              .first()
+              .orNull();
+      assertNull("Asm files shouldn't support precompiled headers", headerRule);
     }
   }
 
@@ -326,7 +343,9 @@ public class PrecompiledHeaderFeatureTest {
         // For GCC we'd use: "-include sometargetname#someflavor-cxx-hexdigitsofhash.h",
         // i.e., it's the "-include" flag like in the prefix header case, but auto-gen-filename.
         for (int i = 0; i + 1 < flags.size(); i++) {
-          if (flags.get(i).equals("-include") && !flags.get(i + 1).endsWith("/" + headerFilename)) {
+          if (flags.get(i).equals("-include")
+              && !flags.get(i + 1).endsWith("/" + headerFilename)
+              && !flags.get(i + 1).equals(headerFilename)) {
             return true;
           }
         }
@@ -357,7 +376,9 @@ public class PrecompiledHeaderFeatureTest {
         // pass a PCH filename that's auto-generated from a target name + flavors + hash chars
         // and other weird stuff.  Here we'll be expecting the original header filename.
         for (int i = 0; i + 1 < flags.size(); i++) {
-          if (flags.get(i).equals("-include") && flags.get(i + 1).endsWith("/" + headerFilename)) {
+          if (flags.get(i).equals("-include")
+              && (flags.get(i + 1).endsWith("/" + headerFilename)
+                  || flags.get(i + 1).equals(headerFilename))) {
             return true;
           }
         }
@@ -372,33 +393,63 @@ public class PrecompiledHeaderFeatureTest {
     return false;
   }
 
-  /**
-   * Configures a CxxSourceRuleFactory.Builder with some sane defaults for PCH tests. Note: doesn't
-   * call "setPrefixHeader", which actually sets the PCH parameters; caller needs to do that in
-   * their various tests.
-   */
-  private static CxxSourceRuleFactory.Builder preconfiguredSourceRuleFactoryBuilder(
-      String targetPath, ActionGraphBuilder graphBuilder) {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildTarget target = BuildTargetFactory.newInstance(targetPath);
-    return CxxSourceRuleFactory.builder()
-        .setProjectFilesystem(new FakeProjectFilesystem())
-        .setBaseBuildTarget(target)
-        .setActionGraphBuilder(graphBuilder)
-        .setPathResolver(pathResolver)
-        .setRuleFinder(ruleFinder)
-        .setPicType(PicType.PDC);
+  /** Creats a CxxSourceRuleFactory with some sane defaults for PCH tests. */
+  private static CxxSourceRuleFactory preconfiguredSourceRuleFactory(
+      ActionGraphBuilder graphBuilder,
+      CxxBuckConfig cxxBuckConfig,
+      CxxPlatform cxxPlatform,
+      SourcePath prefixHeader) {
+    return preconfiguredSourceRuleFactory(
+        graphBuilder,
+        cxxBuckConfig,
+        cxxPlatform,
+        ImmutableList.of(),
+        ImmutableMultimap.of(),
+        Optional.of(prefixHeader),
+        Optional.empty());
   }
 
-  private static CxxSourceRuleFactory.Builder preconfiguredSourceRuleFactoryBuilder(
-      ActionGraphBuilder graphBuilder) {
-    return preconfiguredSourceRuleFactoryBuilder("//foo:bar", graphBuilder);
+  private static CxxSourceRuleFactory preconfiguredSourceRuleFactory(
+      ActionGraphBuilder graphBuilder,
+      CxxBuckConfig cxxBuckConfig,
+      CxxPlatform cxxPlatform,
+      SourcePath prefixHeader,
+      SourcePath precompiledHeader) {
+    return preconfiguredSourceRuleFactory(
+        graphBuilder,
+        cxxBuckConfig,
+        cxxPlatform,
+        ImmutableList.of(),
+        ImmutableMultimap.of(),
+        Optional.of(prefixHeader),
+        Optional.of(precompiledHeader));
+  }
+
+  private static CxxSourceRuleFactory preconfiguredSourceRuleFactory(
+      ActionGraphBuilder graphBuilder,
+      CxxBuckConfig cxxBuckConfig,
+      CxxPlatform cxxPlatform,
+      ImmutableList<CxxPreprocessorInput> cxxPreprocessorInput,
+      ImmutableMultimap<CxxSource.Type, Arg> compilerFlags,
+      Optional<SourcePath> prefixHeader,
+      Optional<SourcePath> precompiledHeader) {
+    return CxxSourceRuleFactory.of(
+        new FakeProjectFilesystem(),
+        BuildTargetFactory.newInstance("//foo:bar"),
+        graphBuilder,
+        graphBuilder.getSourcePathResolver(),
+        cxxBuckConfig,
+        cxxPlatform,
+        cxxPreprocessorInput,
+        compilerFlags,
+        prefixHeader,
+        precompiledHeader,
+        PicType.PDC);
   }
 
   /** Configures a CxxSource.Builder representing a C source file. */
-  private static CxxSource.Builder preconfiguredCxxSourceBuilder() {
-    return CxxSource.builder().setType(CxxSource.Type.C).setPath(FakeSourcePath.of("foo.c"));
+  private static CxxSource preconfiguredCxxSource(ImmutableList<String> flags) {
+    return CxxSource.of(CxxSource.Type.C, FakeSourcePath.of("foo.c"), flags);
   }
 
   private static CxxBuckConfig buildConfig(boolean pchEnabled) {
@@ -416,8 +467,12 @@ public class PrecompiledHeaderFeatureTest {
     return CxxPlatformUtils.build(buildConfig(pchEnabled))
         .withCpp(
             new PreprocessorProvider(
-                PathSourcePath.of(new FakeProjectFilesystem(), Paths.get("/usr/bin/foopp")),
-                Optional.of(type)));
+                new ConstantToolProvider(
+                    new HashedFileTool(
+                        PathSourcePath.of(
+                            new FakeProjectFilesystem(), Paths.get("/usr/bin/foopp")))),
+                type,
+                ToolType.CPP));
   }
 
   private static final CxxPlatform PLATFORM_SUPPORTING_PCH =
