@@ -1,17 +1,17 @@
 /*
- * Copyright 2018-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.parser;
@@ -20,19 +20,20 @@ import com.facebook.buck.core.cell.Cell;
 import com.facebook.buck.core.cell.TestCellBuilder;
 import com.facebook.buck.core.config.FakeBuckConfig;
 import com.facebook.buck.core.exceptions.HumanReadableException;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.core.model.BuildFileTree;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.impl.InMemoryBuildFileTree;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.file.MorePaths;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableSet;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Optional;
+import org.hamcrest.Matchers;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -49,7 +50,7 @@ public class ThrowingPackageBoundaryCheckerTest {
                 new CacheLoader<Cell, BuildFileTree>() {
                   @Override
                   public BuildFileTree load(Cell cell) {
-                    return new InMemoryBuildFileTree(Collections.<Path>emptyList());
+                    return new InMemoryBuildFileTree(Collections.emptyList());
                   }
                 });
     ThrowingPackageBoundaryChecker boundaryChecker =
@@ -57,14 +58,12 @@ public class ThrowingPackageBoundaryCheckerTest {
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
-        "'"
-            + MorePaths.pathWithPlatformSeparators("../Test.java")
-            + "' in '//a/b:c' refers to a parent directory.");
+        Matchers.matchesRegex("'..[/\\\\]Test.java' in '//a/b:c' refers to a parent directory."));
 
     boundaryChecker.enforceBuckPackageBoundaries(
-        new TestCellBuilder().build(),
+        new TestCellBuilder().build().getRootCell(),
         BuildTargetFactory.newInstance("//a/b:c"),
-        ImmutableSet.of(Paths.get("a/Test.java")));
+        ImmutableSet.of(ForwardRelativePath.of("a/Test.java")));
   }
 
   @Test
@@ -75,7 +74,7 @@ public class ThrowingPackageBoundaryCheckerTest {
                 new CacheLoader<Cell, BuildFileTree>() {
                   @Override
                   public BuildFileTree load(Cell cell) {
-                    return new InMemoryBuildFileTree(Collections.<Path>emptyList());
+                    return new InMemoryBuildFileTree(Collections.emptyList());
                   }
                 });
     ThrowingPackageBoundaryChecker boundaryChecker =
@@ -87,9 +86,10 @@ public class ThrowingPackageBoundaryCheckerTest {
                 FakeBuckConfig.builder()
                     .setSections("[project]", "check_package_boundary = false")
                     .build())
-            .build(),
+            .build()
+            .getRootCell(),
         BuildTargetFactory.newInstance("//a/b:c"),
-        ImmutableSet.of(Paths.get("a/Test.java")));
+        ImmutableSet.of(ForwardRelativePath.of("a/Test.java")));
   }
 
   @Test
@@ -100,9 +100,9 @@ public class ThrowingPackageBoundaryCheckerTest {
                 new CacheLoader<Cell, BuildFileTree>() {
                   @Override
                   public BuildFileTree load(Cell cell) {
-                    return new InMemoryBuildFileTree(Collections.<Path>emptyList()) {
+                    return new InMemoryBuildFileTree(Collections.emptyList()) {
                       @Override
-                      public Optional<Path> getBasePathOfAncestorTarget(Path filePath) {
+                      public Optional<RelPath> getBasePathOfAncestorTarget(RelPath filePath) {
                         return Optional.empty();
                       }
                     };
@@ -113,14 +113,12 @@ public class ThrowingPackageBoundaryCheckerTest {
 
     thrown.expect(IllegalStateException.class);
     thrown.expectMessage(
-        "Target '//a/b:c' refers to file '"
-            + MorePaths.pathWithPlatformSeparators("a/b/Test.java")
-            + "', which doesn't belong to any package");
-
+        "Target '//a/b:c' refers to file 'a/b/Test.java', which doesn't belong to any package."
+            + " More info at:\nhttps://buck.build/about/overview.html\n");
     boundaryChecker.enforceBuckPackageBoundaries(
-        new TestCellBuilder().build(),
+        new TestCellBuilder().build().getRootCell(),
         BuildTargetFactory.newInstance("//a/b:c"),
-        ImmutableSet.of(Paths.get("a/b/Test.java")));
+        ImmutableSet.of(ForwardRelativePath.of("a/b/Test.java")));
   }
 
   @Test
@@ -131,10 +129,10 @@ public class ThrowingPackageBoundaryCheckerTest {
                 new CacheLoader<Cell, BuildFileTree>() {
                   @Override
                   public BuildFileTree load(Cell cell) {
-                    return new InMemoryBuildFileTree(Collections.<Path>emptyList()) {
+                    return new InMemoryBuildFileTree(Collections.emptyList()) {
                       @Override
-                      public Optional<Path> getBasePathOfAncestorTarget(Path filePath) {
-                        return Optional.of(Paths.get("d"));
+                      public Optional<RelPath> getBasePathOfAncestorTarget(RelPath filePath) {
+                        return Optional.of(RelPath.get("d"));
                       }
                     };
                   }
@@ -143,7 +141,7 @@ public class ThrowingPackageBoundaryCheckerTest {
         new ThrowingPackageBoundaryChecker(buildFileTrees);
 
     thrown.expect(HumanReadableException.class);
-    String testPath = MorePaths.pathWithPlatformSeparators("a/b/Test.java");
+    String testPath = "a/b/Test.java";
     String dPath = MorePaths.pathWithPlatformSeparators("d/BUCK");
     thrown.expectMessage(
         "The target '//a/b:c' tried to reference '"
@@ -153,19 +151,20 @@ public class ThrowingPackageBoundaryCheckerTest {
             + "' can only be referenced from '"
             + dPath
             + "' \nwhich is its closest parent 'BUCK' file.\n\n"
-            + "You should find or create the rule in '"
+            + "You should find or create a rule in '"
             + dPath
             + "' that references\n'"
             + testPath
             + "' and use that in '//a/b:c'\ninstead of directly referencing '"
             + testPath
-            + "'.\n\nThis may also be due to a bug in buckd's caching.\n"
-            + "Please check whether using `buck kill` will resolve it.");
+            + "'.\nMore info at:\nhttps://buck.build/concept/build_rule.html\n"
+            + "\nThis issue might also be caused by a bug in buckd's caching.\n"
+            + "Please check whether using `buck kill` resolves it.");
 
     boundaryChecker.enforceBuckPackageBoundaries(
-        new TestCellBuilder().build(),
+        new TestCellBuilder().build().getRootCell(),
         BuildTargetFactory.newInstance("//a/b:c"),
-        ImmutableSet.of(Paths.get("a/b/Test.java")));
+        ImmutableSet.of(ForwardRelativePath.of("a/b/Test.java")));
   }
 
   @Test
@@ -176,15 +175,15 @@ public class ThrowingPackageBoundaryCheckerTest {
                 new CacheLoader<Cell, BuildFileTree>() {
                   @Override
                   public BuildFileTree load(Cell cell) {
-                    return new InMemoryBuildFileTree(Collections.singleton(Paths.get("a/b")));
+                    return new InMemoryBuildFileTree(Collections.singleton(RelPath.get("a/b")));
                   }
                 });
     ThrowingPackageBoundaryChecker boundaryChecker =
         new ThrowingPackageBoundaryChecker(buildFileTrees);
 
     boundaryChecker.enforceBuckPackageBoundaries(
-        new TestCellBuilder().setFilesystem(new FakeProjectFilesystem()).build(),
+        new TestCellBuilder().setFilesystem(new FakeProjectFilesystem()).build().getRootCell(),
         BuildTargetFactory.newInstance("//a/b:c"),
-        ImmutableSet.of(Paths.get("a/b/Test.java")));
+        ImmutableSet.of(ForwardRelativePath.of("a/b/Test.java")));
   }
 }
