@@ -1,18 +1,19 @@
 /*
- * Copyright 2015-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.facebook.buck.rules.coercer;
 
 import static com.facebook.buck.core.cell.TestCellBuilder.createCellRoots;
@@ -20,11 +21,12 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.google.common.collect.ImmutableMap;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import com.google.common.reflect.TypeToken;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -34,12 +36,13 @@ public class ManifestEntriesTypeCoercerTest {
   private ManifestEntriesTypeCoercer manifestEntriesTypeCoercer;
 
   private ProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private Path basePath = Paths.get("java/com/facebook/buck/example");
+  private ForwardRelativePath basePath = ForwardRelativePath.of("java/com/facebook/buck/example");
 
   @Before
-  public void setUp() throws Exception {
+  public void setUp() {
     DefaultTypeCoercerFactory factory = new DefaultTypeCoercerFactory();
-    TypeCoercer<?> typeCoercer = factory.typeCoercerForType(ManifestEntries.class);
+    TypeCoercer<?, ManifestEntries> typeCoercer =
+        factory.typeCoercerForType(TypeToken.of(ManifestEntries.class));
     assertTrue(typeCoercer instanceof ManifestEntriesTypeCoercer);
     manifestEntriesTypeCoercer = (ManifestEntriesTypeCoercer) typeCoercer;
   }
@@ -57,12 +60,17 @@ public class ManifestEntriesTypeCoercerTest {
 
     ManifestEntries result =
         manifestEntriesTypeCoercer.coerce(
-            createCellRoots(filesystem), filesystem, basePath, /* object */ inputMap);
+            createCellRoots(filesystem).getCellNameResolver(),
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            inputMap);
 
     assertTrue(result.getDebugMode().get());
-    assertEquals(3, result.getMinSdkVersion().getAsInt());
-    assertEquals(5, result.getTargetSdkVersion().getAsInt());
-    assertEquals(7, result.getVersionCode().getAsInt());
+    assertEquals(3, result.getMinSdkVersion().get().intValue());
+    assertEquals(5, result.getTargetSdkVersion().get().intValue());
+    assertEquals(7, result.getVersionCode().get().intValue());
     assertEquals("eleven", result.getVersionName().get());
   }
 
@@ -72,7 +80,12 @@ public class ManifestEntriesTypeCoercerTest {
         ImmutableMap.<String, Object>builder().put("bad_param_name", 3).build();
 
     manifestEntriesTypeCoercer.coerce(
-        createCellRoots(filesystem), filesystem, basePath, /* object */ inputMap);
+        createCellRoots(filesystem).getCellNameResolver(),
+        filesystem,
+        basePath,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        UnconfiguredTargetConfiguration.INSTANCE,
+        inputMap);
   }
 
   @Test
@@ -86,11 +99,16 @@ public class ManifestEntriesTypeCoercerTest {
 
     ManifestEntries result =
         manifestEntriesTypeCoercer.coerce(
-            createCellRoots(filesystem), filesystem, basePath, /* object */ inputMap);
+            createCellRoots(filesystem).getCellNameResolver(),
+            filesystem,
+            basePath,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
+            inputMap);
 
     assertTrue(result.getDebugMode().get());
-    assertEquals(3, result.getMinSdkVersion().getAsInt());
-    assertEquals(5, result.getTargetSdkVersion().getAsInt());
+    assertEquals(3, result.getMinSdkVersion().get().intValue());
+    assertEquals(5, result.getTargetSdkVersion().get().intValue());
     assertFalse(result.getVersionCode().isPresent());
     assertFalse(result.getVersionName().isPresent());
   }
