@@ -1,29 +1,31 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
 
 import static com.facebook.buck.core.cell.TestCellBuilder.createCellRoots;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
 
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.util.environment.Platform;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -32,9 +34,8 @@ import org.junit.rules.ExpectedException;
 public class PathTypeCoercerTest {
 
   private ProjectFilesystem filesystem;
-  private final Path pathRelativeToProjectRoot = Paths.get("");
-  private final PathTypeCoercer pathTypeCoercer =
-      new PathTypeCoercer(PathTypeCoercer.PathExistenceVerificationMode.VERIFY);
+  private final ForwardRelativePath pathRelativeToProjectRoot = ForwardRelativePath.of("");
+  private final PathTypeCoercer pathTypeCoercer = new PathTypeCoercer();
 
   @Rule public ExpectedException expectedException = ExpectedException.none();
 
@@ -44,31 +45,81 @@ public class PathTypeCoercerTest {
   }
 
   @Test
-  public void coercingInvalidPathThrowsException() {
-    String invalidPath = "";
-    try {
-      pathTypeCoercer.coerce(
-          createCellRoots(filesystem), filesystem, pathRelativeToProjectRoot, invalidPath);
-      fail("expected to throw when");
-    } catch (CoerceFailedException e) {
-      assertEquals("invalid path", e.getMessage());
-    }
-  }
-
-  @Test
-  public void coercingMissingFileThrowsExceptionWhenVerificationEnabled() throws Exception {
-    String missingPath = "hello";
+  public void coercingInvalidPathThrowsException() throws CoerceFailedException {
     expectedException.expect(CoerceFailedException.class);
-    expectedException.expectMessage(String.format("no such file or directory '%s'", missingPath));
+    expectedException.expectMessage("invalid path");
 
-    pathTypeCoercer.coerce(
-        createCellRoots(filesystem), filesystem, pathRelativeToProjectRoot, missingPath);
+    String invalidPath = "";
+    pathTypeCoercer.coerceToUnconfigured(
+        createCellRoots(filesystem).getCellNameResolver(),
+        filesystem,
+        pathRelativeToProjectRoot,
+        invalidPath);
   }
 
   @Test
-  public void coercingMissingFileDoesNotThrowWhenVerificationDisabled() throws Exception {
+  public void coercingOtherInvalidPathThrowsException() throws CoerceFailedException {
+    String invalidPath = "foo/bar\0";
+
+    expectedException.expect(CoerceFailedException.class);
+    expectedException.expectMessage(String.format("Could not convert '%s' to a Path", invalidPath));
+    expectedException.expectCause(Matchers.instanceOf(InvalidPathException.class));
+
+    pathTypeCoercer.coerceToUnconfigured(
+        createCellRoots(filesystem).getCellNameResolver(),
+        filesystem,
+        pathRelativeToProjectRoot,
+        invalidPath);
+  }
+
+  @Test
+  public void absolutePath() throws CoerceFailedException {
+    String invalidPath = Platform.detect() == Platform.WINDOWS ? "c:/foo/bar" : "/foo/bar";
+
+    expectedException.expect(CoerceFailedException.class);
+    expectedException.expectMessage("Path cannot contain an absolute path");
+
+    pathTypeCoercer.coerceToUnconfigured(
+        createCellRoots(filesystem).getCellNameResolver(),
+        filesystem,
+        pathRelativeToProjectRoot,
+        invalidPath);
+  }
+
+  @Test
+  public void aboveRepoRoot() throws CoerceFailedException {
+    String invalidPath = "../..";
+
+    expectedException.expect(CoerceFailedException.class);
+    expectedException.expectMessage("Path cannot point to above repository root");
+
+    pathTypeCoercer.coerceToUnconfigured(
+        createCellRoots(filesystem).getCellNameResolver(),
+        filesystem,
+        ForwardRelativePath.of("foo"),
+        invalidPath);
+  }
+
+  @Test
+  public void coercingMissingFileDoesNotThrow() throws Exception {
     String missingPath = "hello";
-    new PathTypeCoercer(PathTypeCoercer.PathExistenceVerificationMode.DO_NOT_VERIFY)
-        .coerce(createCellRoots(filesystem), filesystem, pathRelativeToProjectRoot, missingPath);
+    new PathTypeCoercer()
+        .coerceToUnconfigured(
+            createCellRoots(filesystem).getCellNameResolver(),
+            filesystem,
+            pathRelativeToProjectRoot,
+            missingPath);
+  }
+
+  @Test
+  public void normalizesPath() throws Exception {
+    Path coerced =
+        new PathTypeCoercer()
+            .coerceToUnconfigured(
+                createCellRoots(filesystem).getCellNameResolver(),
+                filesystem,
+                ForwardRelativePath.of("foo"),
+                "./bar/././fish.txt");
+    assertEquals("foo/bar/fish.txt", coerced.toString().replace('\\', '/'));
   }
 }
